# guitar

./: README.md  index.js  package.json
eartrainer/: README.md  pyproject.toml
eartrainer/eartrainer/: app_streamlit.py  audio.py  models.py  piano.py  storage.py  theory.py  trainer.py
eartrainer/tests/: test_audio.py  test_theory.py  test_trainer.py
